/**
 * MIT License
 * Copyright (c) 2020 Fonoster Inc
 *
 * The Numbers proto contains the artificats for the administration
 * of Numbers.
 */
syntax = "proto3";

package fonos.numbers.v1beta1;

import "common.proto";

service Numbers {
  // Lists Numbers from the SIP Proxy subsystem
  rpc ListNumbers (ListNumbersRequest) returns (ListNumbersResponse) {};
  // Creates a new Number resource.
  rpc CreateNumber (CreateNumberRequest) returns (Number) {};
  // Gets the ingess information for a given e164 number
  rpc GetIngressInfo (GetIngressInfoRequest) returns (IngressInfo) {};
  // Gets Number using its reference
  rpc GetNumber (GetNumberRequest) returns (Number) {};
  // Change or update fields in a resource
  rpc UpdateNumber (UpdateNumberRequest) returns (Number) {};
  // Hard delete of a Number resource
  rpc DeleteNumber (DeleteNumberRequest) returns (fonos.common.v1beta1.Empty) {};
}

message ListNumbersRequest {
  // The maximum number of items to return.
  int32 page_size = 1;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 2;

  // Level of detail of the individual entities
  fonos.common.v1beta1.View view = 3;
}

message ListNumbersResponse {
  // There will be a maximum number of items returned based on the page_size field
  // in the request.
  repeated Number numbers = 1;

  // Token to retrieve the next page of results, or empty if there are no
  // more results in the list.
  string next_page_token = 2;
}

message CreateNumberRequest {
  Number number = 1;
}

message UpdateNumberRequest {
  Number number = 1;
}

message GetNumberRequest {
  string ref = 1;
}

message GetIngressInfoRequest {
  string e164_number = 1;
}

message DeleteNumberRequest {
  string ref = 1;
}

message Number {
  string ref = 1;
  string provider_ref = 2;
  string e164_number = 3;
  string aor_link = 4;
  IngressInfo ingress_info = 5;
  string create_time = 6;
  string update_time = 7;
}

message IngressInfo {
  string access_key_id = 1;
  string webhook = 2;
}